# funtech-tech-assignment

./: .gitignore  .pre-commit-config.yaml  API_TESTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  env.template  pyproject.toml
.local_dev/: docker-compose.infra.local.yml
src/: main.py
src/api/: __init__.py  error_handling.py
src/api/v1/: __init__.py  routers.py
src/api/v1/handlers/: __init__.py  auth_controller.py  orders_controller.py
src/api/v1/mappers/: __init__.py  order_mapper.py
src/api/v1/schemas/: __init__.py  auth.py  orders.py
src/application/: __init__.py  exceptions.py  mappers.py
src/application/dtos/: __init__.py  auth.py  order.py  user.py
src/application/interfaces/: __init__.py  cache.py  message_broker.py  repositories.py  uow.py
src/application/services/: __init__.py  security.py
src/application/use_cases/: __init__.py  create_order.py  dispatch_outbox.py  get_order.py  list_user_orders.py  login_user.py  register_user.py  update_order_status.py
src/config/: __init__.py  app.py  auth.py  base.py  broker.py  cors.py  database.py  logging.py  redis.py  settings.py
src/config/ioc/: __init__.py  di.py  providers.py
src/domain/: __init__.py  exceptions.py
src/domain/entities/: __init__.py  order.py  outbox_event.py  user.py
src/domain/value_objects/: __init__.py  order_status.py
src/infra/: __init__.py
src/infra/broker/: __init__.py  consumer.py  publisher.py
src/infra/cache/: __init__.py  redis_client.py  redis_resource.py
src/infra/db/: __init__.py  base.py  session.py  uow.py
src/infra/db/migrations/: __init__.py  env.py  script.py.mako
src/infra/db/migrations/versions/: 2025_12_17_0133-97a3cd550d8b_initial.py
src/infra/db/models/: __init__.py  order.py  outbox.py  user.py
src/infra/db/repositories/: __init__.py  order.py  outbox.py  user.py
src/infra/logger/: __init__.py  context.py  middleware.py  setup.py
src/infra/logger/configure/: __init__.py  interceptor.py  sinks.py
src/infra/tasks/: __init__.py  celery_app.py  tasks.py
