[project]
name = "order_service"
version = "0.1.0"
description = "Order management service built on FastAPI with clean architecture."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg==0.31.0",
    "celery==5.6.0",
    "dishka==1.7.2",
    "email-validator==2.3.0",
    "fastapi==0.124.4",
    "fastapi-limiter>=0.1.6",
    "faststream[cli,rabbit]==0.6.4",
    "granian==2.6.0",
    "greenlet==3.3.0",
    "gunicorn>=23.0.0",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "redis==7.1.0",
    "sqlalchemy[asyncio]==2.0.45",
    "tenacity==9.1.2",
    "uvicorn[standard]==0.38.0",
]



[dependency-groups]
dev = [
    "ruff==0.14.9",
    "mypy==1.19.1",
    "types-redis==4.6.0.20241004",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "Faker==38.2.0",
    "types-deprecated>=1.3.1.20251101",
    "types-pymysql>=1.1.0.20250916",
    "types-pyyaml>=6.0.12.20250915",
    "types-pygments>=2.19.0.20251121",
    "types-colorama>=0.4.15.20250801",
    "types-greenlet>=3.3.0.20251206",
    "types-passlib>=1.7.7.20250602",
    "types-psycopg2>=2.9.21.20251012",
    "types-python-jose>=3.5.0.20250531",
    "types-ujson>=5.10.0.20250822",
    "celery-stubs>=0.1.3",
]


[tool.mypy]
mypy_path = "./src"
python_version = 3.13
strict = true

[[tool.mypy.overrides]]
module = "config.settings"
disable_error_code = ["call-arg"]


[tool.ruff]
src = ["./src"]
target-version = "py313"
line-length = 82

[tool.ruff.lint]
select = [
    "A",
    "B",
    "E",
    "D",
    "ASYNC",
    "F",
    "ISC",
    "UP",
    "RUF",
]

ignore = [
    "E712",
    "E501",
    "A003",
    "B904",
    "B008",
    "RUF002",
    "RUF001",
    "D415",
]

fixable = [
    "F401",
    "NPY001",
    "RUF100",
    "UP007",
    "UP035",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
